Fixed bugged blank button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -42,9 +42,8 @@
                     Whether you're a frequent traveler or aviation enthusiast, stay connected to the skies like never before.
                 </p>
                 <div class="hero-buttons">
-                    <a href="{% url 'home:flight_detail' 1 %}" class="btn btn-primary-large">
                     <a href="{% url 'search:search' %}" class="btn btn-primary-large">Start Tracking Flights</a>
-                    <a href="#features" class="btn btn-secondary-large">Explore Features</a>
+                    <a href="{% url 'search:search' %}" class="btn btn-secondary-large">Flight Dashboard</a>
                 </div>
             </div>
         </div>
