Fixed small bug, flight dashboard button was redirecting to the wrong url

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -43,7 +43,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="{% url 'search:search' %}" class="btn btn-primary-large">Start Tracking Flights</a>
-                    <a href="{% url 'search:search' %}" class="btn btn-secondary-large">Flight Dashboard</a>
+                    <a href="{% url 'home:flight_detail' 1 %}" class="btn btn-secondary-large">Flight Dashboard</a>
                 </div>
             </div>
         </div>
