--- a/home/templates/home/weather_insights.html
+++ b/home/templates/home/weather_insights.html
@@ -206,7 +206,7 @@
         }
         
         .navbar {
-            background: #000;
+            background: transparent;
             padding: 1rem 0;
         }
         
