--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Out of the Sky - Real-Time Flight Tracking & Aviation Intelligence</title>
