Interactive map created for planes, still needs API implementation

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#team">Team</a></li>
                 <li><a href="{% url 'home:flight_detail' 1 %}">Dashboard</a></li>
                 <li><a href="{% url 'search:search' %}" class="btn-primary">Search Flights</a></li>
+                <li><a href="{% url 'search:interactive_map' %}">Live Map</a></li>
             </ul>
         </div>
     </nav>
