--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -23,6 +23,7 @@
             <ul class="nav-menu">
                 <li><a href="{% url 'home:index' %}">Home</a></li>
                 <li><a href="{% url 'search:search' %}">Search</a></li>
+                <li><a href="{% url 'search:interactive_map' %}">Live Map</a></li>
                 <li><a href="#" class="btn-primary">Dashboard</a></li>
             </ul>
         </div>
