Make dashboard links dynamic - use first available flight

--- a/home/templates/home/weather_insights.html
+++ b/home/templates/home/weather_insights.html
@@ -366,7 +366,7 @@
                 </a>
             </div>
             <ul class="nav-menu">
-                <li><a href="{% url 'home:index' %}">Home</a></li>
+                <li><a href="{% url 'home:index' %}">Home</a></li>  <!-- CHANGE THIS LINE -->
                 <li><a href="{% url 'search:search' %}">Search</a></li>
                 <li><a href="{% url 'home:weather_insights' %}">Weather</a></li>
                 <li><a href="{% url 'home:flight_detail' 1 %}" class="btn-primary">Dashboard</a></li>
