--- a/home/templates/home/weather_insights.html
+++ b/home/templates/home/weather_insights.html
@@ -228,7 +228,7 @@
             {% if weather %}
             <div class="alert alert-info mb-4">
                 <h2>{{ weather.city }}</h2>
-                <p><b>Temperature:</b> {{ weather.temp }}°C</p>
+                <p><b>Temperature:</b> {{ weather.temp }}°F</p>
                 <p><b>Condition:</b> {{ weather.condition }}</p>
             </div>
             {% endif %}
